fixing project info description paragraph spacing

--- a/pages/case-study/CaseStudy.module.scss
+++ b/pages/case-study/CaseStudy.module.scss
@@ -274,6 +274,14 @@
   .description {
     margin-right: calc(helpers.$gutter_desktop * 2);
     width: calc(helpers.$gutter_desktop * 3.5);
+
+    p {
+      margin-bottom: 15px;
+
+      &:last-of-type {
+        margin-bottom: 0;
+      }
+    }
   }
 
   .credits {
